--- a/README.org
+++ b/README.org
@@ -8,9 +8,7 @@
 + Includes resources & course notes, demonstrating the raw Web Audio API, [[https://p5js.org/][p5.js]] and [[https://tonejs.github.io/][Tone.js]]
 
 * Contents
-+ [[Tools][Tools]]
-+ [[./docs/snippets.md][Snippets]]
-+ [[Further Reading][Further Reading]]
++ [[Tools]]
 
 * Tools
 
